# super-cow

./: README.md  file  my-project.cabal  super-cow.cabal
app/: Main.hs
doc/: doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index.html  index.html
doc/all/: doc-index-124.html  doc-index-36.html  doc-index-45.html  doc-index-60.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index-X.html  doc-index-Y.html  doc-index-Z.html  index.html
doc/super-cow-0.1/: Const.html  Game-Bonus.html  Game-Obstacle.html  Game-Player.html  Game-Universe.html  Interface.html  SuperCow.html  Type.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  (+16 more)
src/: Bonus.hs  Const.hs  Interface.hs  SuperCow.hs  SuperCowBackUp.hs  Type.hs  Копия SuperCow.hs
(+12 files in other folders)
