name:                super-cow
version:             0.1
-- synopsis:
-- description:
-- homepage:
-- license:
-- license-file:
author:              Author name here
maintainer:          author@email.com
copyright:           2017 Author name here
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-type-defaults
  exposed-modules:     SuperCow
                     , Const
                     , Type
                     , Game.Bonus
                     , Game.Obstacle
                     , Game.Player
                     , Game.Universe
                     , Interface
  build-depends:       base >= 4.7 && < 5
                     , gloss
                     , random
                     , gloss-juicy
  default-language:    Haskell2010

executable super-cow
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , super-cow
  default-language:    Haskell2010

test-suite super-cow-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , super-cow
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
